--- a/crm/client/src/style.css
+++ b/crm/client/src/style.css
@@ -153,3 +153,43 @@ button:hover {
 .row-prospect {
   background-color: rgb(173, 216, 230);
 }
+
+/* Modal CSS */
+
+ /* The Modal (background) */
+ .modal {
+    display:block; 
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    background-color: rgb(82, 77, 77);
+    background-color: rgba(211, 211, 211, 0.4);
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  overflow-y: scroll;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float:right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+} 
